# foobar1974

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/mpris/: mod.rs
src-tauri/src/player/: mod.rs
src-tauri/src/replaygain/: mod.rs
src-tauri/src/state/: mod.rs
src/components/: LibraryPane.tsx  NowPlayingBar.tsx  QueuePane.tsx
src/db/: mod.rs
src/player/: mod.rs
src/state/: store.ts
src/styles/: app.css
