[package]
name = "foobar1974"
version = "0.1.0"
description = "foobar2000-inspired music player"
authors = ["codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4"
dirs = "5"
lofty = "0.20"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync", "time", "io-util"] }
walkdir = "2"
zbus = "4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
